# zephyr_microchip-mcp3425

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: zest_core_stm32l4a6rg.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig
drivers/adc/microchip/: CMakeLists.txt  Kconfig
drivers/adc/microchip/mcp3425/: CMakeLists.txt  Kconfig  mcp3425.c  mcp3425.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/mcp3425/: CMakeLists.txt  Kconfig  mcp3425.c
drivers/sensor/microchip/mcp3425/: CMakeLists.txt
dts/bindings/adc/: microchip,mcp3425.yaml
dts/bindings/sensor/: microchip,mcp3425.yaml
samples/: CMakeLists.txt  app.overlay  prj.conf  sample.yaml
samples/src/: main.c
src/: main.c
